--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
       <meta charset="utf-8"/>
       <title> Arvuta portfelli tulevikuväärtus </title>
       <script src="http://code.jquery.com/jquery-1.11.2.min.js"></script>
+      <script src="https://code.highcharts.com/highcharts.js"></script>
       <script src="js/app.js"></script>
 </head>
 <body>
@@ -32,6 +33,7 @@
 
   </form>
 
+<div id="container" style="min-width: 310px; height: 400px; margin: 0 auto"></div>
 
 
 
