--- a/index.html
+++ b/index.html
@@ -34,6 +34,28 @@
   </form>
 
 <div id="container" style="min-width: 310px; height: 400px; margin: 0 auto"></div>
+<div id="table-container">
+  <table>
+    <thead>
+      <tr>
+        <th> month</th>
+        <th> principal</th>
+        <th> interest</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>   1   </td>
+        <td>   2500   </td>
+        <td>   25   </td>
+      </tr>
+    </tbody>
+  </table>
+
+
+
+
+</div>
 
 
 
