--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
       <script src="http://code.jquery.com/jquery-1.11.2.min.js"></script>
       <script src="https://code.highcharts.com/highcharts.js"></script>
       <script src="js/app.js"></script>
+      <link rel="stylesheet" type="text/css" href="view.css">
 </head>
 <body>
 
